[package]
name = "Netlius"
version = "0.1.0"
authors = ["camdenorrb <5360339+camdenorrb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map= "0.6.3"
futures = "0.3.5"

[dependencies.async-std]
version = "*"
features = ["attributes"]

[profile.release]

opt-level     = 3
codegen-units = 1

lto   = true
debug = false

incremental      = false
overflow-checks  = false
debug-assertions = false